--- a/business-partner-detail/components/bp-address/bp-address.component.html
+++ b/business-partner-detail/components/bp-address/bp-address.component.html
@@ -1,16 +1,19 @@
 <ion-grid fixed>
-	<span *ngIf="(mapLoaded | async)"></span>
-	<form [formGroup]="formGroup">
-		<ng-container formArrayName="Addresses">
-			<ion-row class="hr-group border" *ngFor="let add of formGroup.get('Addresses')['controls']; let i=index">
-				<ng-container [formGroup]="add">
-					<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
-						<ion-list-header class="ion-no-padding">
-							<ion-label color="primary">{{'Address' | translate}} <span *ngIf="i>0">{{i + 1}}</span> </ion-label>
-						</ion-list-header>
-					</ion-col>
-					<ion-col size="12" size-sm size-xl="4">
-						<!-- <div class="c-control">
+  <span *ngIf="mapLoaded | async"></span>
+  <form [formGroup]="formGroup">
+    <ng-container formArrayName="Addresses">
+      <ion-row class="hr-group border" *ngFor="let add of formGroup.get('Addresses')['controls']; let i = index">
+        <ng-container [formGroup]="add">
+          <ion-col size="12" size-sm="12" size-md="12" size-xl="3">
+            <ion-list-header class="ion-no-padding">
+              <ion-label color="primary"
+                >{{ 'Address' | translate }}
+                <span *ngIf="i > 0">{{ i + 1 }}</span>
+              </ion-label>
+            </ion-list-header>
+          </ion-col>
+          <ion-col size="12" size-sm size-xl="4">
+            <!-- <div class="c-control">
               <label class="c-label" [for]="'Country'+i">{{'country' | translate}} <small>Country</small>
                 <span *ngIf="!add.controls.Country.valid && !add.controls.Country.pending && (add.controls.Country.dirty || submitAttempt)" ion-text color="danger">(*)</span>
               </label>
@@ -24,77 +27,190 @@
               </ng-select>
 
             </div> -->
-						<div class="c-control">
-							<label class="c-label" [for]="'Province'+i">{{'Provinces' | translate}}
-								<span *ngIf="!add.controls.Province.valid && !add.controls.Province.pending && (add.controls.Province.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'Province'+i" formControlName="Province">
-						</div>
-						<div class="c-control">
-							<label class="c-label" [for]="'District'+i">{{'District' | translate}}
-								<span *ngIf="!add.controls.District.valid && !add.controls.District.pending && (add.controls.District.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'District'+i" formControlName="District">
-						</div>
-						<div class="c-control">
-							<label class="c-label" [for]="'Ward'+i">{{'Ward' | translate}}
-								<span *ngIf="!add.controls.Ward.valid && !add.controls.Ward.pending && (add.controls.Ward.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'Ward'+i" formControlName="Ward">
-						</div>
-						<!-- <div class="c-control">
+            <div class="c-control">
+              <label class="c-label" [for]="'Province' + i"
+                >{{ 'Provinces' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Province.valid &&
+                    !add.controls.Province.pending &&
+                    (add.controls.Province.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input
+                (change)="saveAddress(add)"
+                class="c-input"
+                [attr.id]="'Province' + i"
+                formControlName="Province"
+              />
+            </div>
+            <div class="c-control">
+              <label class="c-label" [for]="'District' + i"
+                >{{ 'District' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.District.valid &&
+                    !add.controls.District.pending &&
+                    (add.controls.District.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input
+                (change)="saveAddress(add)"
+                class="c-input"
+                [attr.id]="'District' + i"
+                formControlName="District"
+              />
+            </div>
+            <div class="c-control">
+              <label class="c-label" [for]="'Ward' + i"
+                >{{ 'Ward' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Ward.valid && !add.controls.Ward.pending && (add.controls.Ward.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input (change)="saveAddress(add)" class="c-input" [attr.id]="'Ward' + i" formControlName="Ward" />
+            </div>
+            <!-- <div class="c-control">
 							<label class="c-label" [for]="'ZipCode'+i">{{'Zip code' | translate}}
 								<span *ngIf="!add.controls.ZipCode.valid && !add.controls.ZipCode.pending && (add.controls.ZipCode.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 							</label>
 							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'ZipCode'+i" formControlName="ZipCode">
 						</div> -->
 
-						<div class="c-control">
-							<label class="c-label" [for]="'AddressLine1'+i">{{'House number, street name, quarter' | translate}}
-								<span *ngIf="!add.controls.AddressLine1.valid && !add.controls.AddressLine1.pending && (add.controls.AddressLine1.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'AddressLine1'+i" formControlName="AddressLine1">
-						</div>
+            <div class="c-control">
+              <label class="c-label" [for]="'AddressLine1' + i"
+                >{{ 'House number, street name, quarter' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.AddressLine1.valid &&
+                    !add.controls.AddressLine1.pending &&
+                    (add.controls.AddressLine1.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input
+                (change)="saveAddress(add)"
+                class="c-input"
+                [attr.id]="'AddressLine1' + i"
+                formControlName="AddressLine1"
+              />
+            </div>
 
-						<div class="c-control">
-							<label class="c-label" [for]="'AddressLine2'+i">{{'Apartment, Building, Unit…' | translate}}
-								<span *ngIf="!add.controls.AddressLine2.valid && !add.controls.AddressLine2.pending && (add.controls.AddressLine2.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'AddressLine2'+i" formControlName="AddressLine2">
-						</div>
+            <div class="c-control">
+              <label class="c-label" [for]="'AddressLine2' + i"
+                >{{ 'Apartment, Building, Unit…' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.AddressLine2.valid &&
+                    !add.controls.AddressLine2.pending &&
+                    (add.controls.AddressLine2.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input
+                (change)="saveAddress(add)"
+                class="c-input"
+                [attr.id]="'AddressLine2' + i"
+                formControlName="AddressLine2"
+              />
+            </div>
 
-						<div class="c-control">
-							<label class="c-label" [for]="'Remark'+i">{{'remark' | translate}}
-								<span *ngIf="!add.controls.Remark.valid && !add.controls.Remark.pending && (add.controls.Remark.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<textarea (change)="saveAddress(add)" rows="2" class="c-input" [attr.id]="'Remark'+i" formControlName="Remark" type="textarea"></textarea>
-						</div>
+            <div class="c-control">
+              <label class="c-label" [for]="'Remark' + i"
+                >{{ 'remark' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Remark.valid &&
+                    !add.controls.Remark.pending &&
+                    (add.controls.Remark.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <textarea
+                (change)="saveAddress(add)"
+                rows="2"
+                class="c-input"
+                [attr.id]="'Remark' + i"
+                formControlName="Remark"
+                type="textarea"
+              ></textarea>
+            </div>
+          </ion-col>
+          <ion-col size="12" size-sm size-xl="4">
+            <div class="c-control">
+              <label class="c-label" [for]="'Contact' + i"
+                >{{ 'Contact' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Contact.valid &&
+                    !add.controls.Contact.pending &&
+                    (add.controls.Contact.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input (change)="saveAddress(add)" class="c-input" [attr.id]="'Contact' + i" formControlName="Contact" />
+            </div>
 
-					</ion-col>
-					<ion-col size="12" size-sm size-xl="4">
-						<div class="c-control">
-							<label class="c-label" [for]="'Contact'+i">{{'Contact' | translate}}
-								<span *ngIf="!add.controls.Contact.valid && !add.controls.Contact.pending && (add.controls.Contact.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'Contact'+i" formControlName="Contact">
-						</div>
+            <div class="c-control">
+              <label class="c-label" [for]="'Phone1' + i"
+                >{{ 'Telephone' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Phone1.valid &&
+                    !add.controls.Phone1.pending &&
+                    (add.controls.Phone1.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input (change)="saveAddress(add)" class="c-input" [attr.id]="'Phone1' + i" formControlName="Phone1" />
+            </div>
 
-						<div class="c-control">
-							<label class="c-label" [for]="'Phone1'+i">{{'Telephone' | translate}}
-								<span *ngIf="!add.controls.Phone1.valid && !add.controls.Phone1.pending && (add.controls.Phone1.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'Phone1'+i" formControlName="Phone1">
-						</div>
+            <div class="c-control">
+              <label class="c-label" [for]="'Phone2' + i"
+                >{{ 'Telephone number (other)' | translate }}
+                <span
+                  *ngIf="
+                    !add.controls.Phone2.valid &&
+                    !add.controls.Phone2.pending &&
+                    (add.controls.Phone2.dirty || submitAttempt)
+                  "
+                  ion-text
+                  color="danger"
+                  >(*)</span
+                >
+              </label>
+              <input (change)="saveAddress(add)" class="c-input" [attr.id]="'Phone2' + i" formControlName="Phone2" />
+            </div>
 
-						<div class="c-control">
-							<label class="c-label" [for]="'Phone2'+i">{{'Telephone number (other)' | translate}}
-								<span *ngIf="!add.controls.Phone2.valid && !add.controls.Phone2.pending && (add.controls.Phone2.dirty || submitAttempt)" ion-text color="danger">(*)</span>
-							</label>
-							<input (change)="saveAddress(add)" class="c-input" [attr.id]="'Phone2'+i" formControlName="Phone2">
-						</div>
-
-						
-							<!-- <label class="c-label">{{'coordinates' | translate}}
+            <!-- <label class="c-label">{{'coordinates' | translate}}
 								<small>
 									{{add.controls.Lat.value || ('lat' | translate)}}
 									-
@@ -102,13 +218,18 @@
 									
 							</label> -->
 
-							<!-- <google-map class="c-input marker" width="100%" height="100%" *ngIf="env.isMapLoaded && center" [options]="options" [center]="add.controls.Lat.value? {lat: add.controls.Lat.value, lng: add.controls.Long.value } : center">
+            <!-- <google-map class="c-input marker" width="100%" height="100%" *ngIf="env.isMapLoaded && center" [options]="options" [center]="add.controls.Lat.value? {lat: add.controls.Lat.value, lng: add.controls.Long.value } : center">
 								<map-marker #somemarker="mapMarker" [position]="add.controls.Lat.value? {lat: add.controls.Lat.value, lng: add.controls.Long.value } : center" [title]="add.controls.Contact.value" [options]="markerOptions" (mapDragend)="changePosition(somemarker, add)"></map-marker>
 							</google-map> -->
-							<app-coordinate-picker #coordinatePicker *ngIf="env.isMapLoaded" (change)="changeCoordinate($event, add)" [canEdit]="canEdit" [address]="add.value"></app-coordinate-picker>
-						
+            <app-coordinate-picker
+              #coordinatePicker
+              *ngIf="env.isMapLoaded"
+              (change)="changeCoordinate($event, add)"
+              [canEdit]="canEdit"
+              [address]="add.value"
+            ></app-coordinate-picker>
 
-						<!-- <div class="c-control">
+            <!-- <div class="c-control">
               <label class="c-label" [for]="'Lat'+i">{{'latitude' | translate}}
                 <span *ngIf="!add.controls.Lat.valid && !add.controls.Lat.pending && (add.controls.Lat.dirty || submitAttempt)" ion-text color="danger">(*)</span>
               </label>
@@ -126,35 +247,39 @@
               </label>
               <textarea (change)="saveAddress(add)" rows="3" class="c-input" [attr.id]="'Remark'+i" formControlName="Remark" type="textarea"></textarea>
             </div> -->
-					</ion-col>
-					<ion-col size="12" size-sm="12" size-xl="8" offset-xl="3">
-						<div class="c-control">
-							<b>{{add.controls.Contact.value||('contact-person' | translate)}}</b>
-							({{add.controls.Phone1.value||('Telephone'|translate)}} <span>
-								/ {{add.controls.Phone2.value||('Telephone number (other)'|translate)}}</span>) <br>
-							{{add.controls.AddressLine1.value||('House number, street name, quarter'|translate)}},
-							{{add.controls.Ward.value||('Ward'|translate)}},
-							{{add.controls.District.value||('District'|translate)}},
-							{{add.controls.Province.value||('Provinces'|translate)}},
-							{{add.controls.Country.value||('country'|translate)}}<br>
-							{{add.controls.AddressLine2.value||('Apartment, Building, Unit…'|translate)}} <br>
-						</div>
-						<div class="c-control" *ngIf="pageConfig.canEdit">
-							<ion-button (click)="removeAddress(i)" size="small" fill="outline">
-								<ion-icon slot="start" name="trash"></ion-icon>
-								{{'Delete this address' | translate}}
-							</ion-button>
-						</div>
-					</ion-col>
-				</ng-container>
-			</ion-row>
-		</ng-container>
-	</form>
-	<ion-row class="hr-group border" *ngIf="pageConfig.canEdit">
-		<ion-col size="12" size-sm size-xl="4" offset-xl="3">
-			<ion-button (click)="addAddress({Id:0})">
-				{{'Add address' | translate}}
-			</ion-button>
-		</ion-col>
-	</ion-row>
+          </ion-col>
+          <ion-col size="12" size-sm="12" size-xl="8" offset-xl="3">
+            <div class="c-control">
+              <b>{{ add.controls.Contact.value || ('contact-person' | translate) }}</b>
+              ({{ add.controls.Phone1.value || ('Telephone' | translate) }}
+              <span>
+                /
+                {{ add.controls.Phone2.value || ('Telephone number (other)' | translate) }}</span
+              >) <br />
+              {{ add.controls.AddressLine1.value || ('House number, street name, quarter' | translate) }},
+              {{ add.controls.Ward.value || ('Ward' | translate) }},
+              {{ add.controls.District.value || ('District' | translate) }},
+              {{ add.controls.Province.value || ('Provinces' | translate) }},
+              {{ add.controls.Country.value || ('country' | translate) }}<br />
+              {{ add.controls.AddressLine2.value || ('Apartment, Building, Unit…' | translate) }}
+              <br />
+            </div>
+            <div class="c-control" *ngIf="pageConfig.canEdit">
+              <ion-button (click)="removeAddress(i)" size="small" fill="outline">
+                <ion-icon slot="start" name="trash"></ion-icon>
+                {{ 'Delete this address' | translate }}
+              </ion-button>
+            </div>
+          </ion-col>
+        </ng-container>
+      </ion-row>
+    </ng-container>
+  </form>
+  <ion-row class="hr-group border" *ngIf="pageConfig.canEdit">
+    <ion-col size="12" size-sm size-xl="4" offset-xl="3">
+      <ion-button (click)="addAddress({ Id: 0 })">
+        {{ 'Add address' | translate }}
+      </ion-button>
+    </ion-col>
+  </ion-row>
 </ion-grid>
