--- a/business-partner-detail/components/bp-items/bp-items.component.html
+++ b/business-partner-detail/components/bp-items/bp-items.component.html
@@ -27,6 +27,7 @@
 			<div class="table-contain">
 				<section class="table">
 					<header class="bold" style="padding-right: 0">
+						<div class="col-checkbox cell"></div>
 						<div class="col-id cell">{{ 'Id' | translate }}</div>
 						<div class="col-code cell">
 							{{ 'Product code' | translate }}
@@ -37,12 +38,23 @@
 						<!-- <div class="col-money cell">
 							{{ 'Price' | translate }}
 						</div> -->
-
-						<div class="col-checkbox cell" *ngIf="pageConfig.canEdit"></div>
+						<div class="col-icon cell">
+							<ion-button fill="clear" (click)="openItemModel()">
+								<ion-icon slot="icon-only" name="add"></ion-icon>
+							</ion-button>
+						</div>
+						<div class="col-icon cell">
+							<ion-button fill="clear" (click)="deleteSelectedRows()">
+								<ion-icon slot="icon-only" name="trash"></ion-icon>
+							</ion-button>
+						</div>
 					</header>
-					<ng-container formArrayName="Items">
+					<ng-container formArrayName="Items" *ngIf="!pageConfig.showSpinner">
 						<div class="row" [ngClass]="{ odd: j % 2 != 0 }" *ngFor="let c of formGroup.get('Items')['controls']; let j = index">
 							<ng-container [formGroup]="c">
+								<div class="col-checkbox cell">
+									<input class="c-checkbox" type="checkbox" formControlName="Checked" />
+								</div>
 								<div class="col-id cell">
 									<a [routerLink]="['/item/' + c.controls._Item.value.Id]">{{ c.controls._Item.value.Id }}</a>
 								</div>
@@ -52,10 +64,17 @@
 								<div class="col-name cell">
 									{{ c.controls._Item.value.Name }}
 								</div>
+								<div class="col-icon cell">
+									<ion-button fill="clear" size="small" *ngIf="pageConfig.canEdit" (click)="removeItem(j)" title="{{ 'Delete' | translate }}">
+										<ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+									</ion-button>
+								</div>
 							</ng-container>
 						</div>
 					</ng-container>
 				</section>
+
+				<ion-button size="small" fill="outline" (click)="openItemModel()"> <ion-icon slot="start" name="add"></ion-icon>{{ 'Add items' | translate }} </ion-button>
 			</div>
 		</ion-col>
 	</ion-row>
